# drawing

./: Cargo.toml  Dockerfile  Readme.md  index.html
.github/workflows/: rust.yml
drawing_wasm/: Cargo.toml
drawing_wasm/src/: lib.rs
server/: Cargo.toml  Readme.md  index.html  index.js
server/src/: main.rs  ws.rs
src/: Handlers.rs  Ws.rs  main.rs  ws.rs
src/.github/workflows/: deployment.yml
