[package]
name = "drawing_wasm"
version = "0.1.0"
edition = "2021"
description = "canvas drawing"
repository = ""

[profile.release]
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.55"
wasm-bindgen = "0.2.78"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
closure = "0.3.0"

[dependencies.web-sys]
version = "0.3.55"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Location',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
  'WebSocket',
  "MessageEvent",
]
